Adding Freindship Model

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,3 +14,39 @@ padding: 0 !important;
 padding-left: 15px !important;
 
 }
+.user-name {
+
+padding-bottom: 10px;
+margin-top: -25px;
+
+}
+
+.logout {
+
+padding-left: 5;
+margin-top: -45px;
+padding-bottom: 10px;
+
+}
+
+.copyright {
+    padding-top: 30px;
+}
+
+.nav.navbar-right li {
+
+.btn {
+
+color: #fff !important;
+
+margin-top: 5%;
+
+}
+
+.btn-danger:hover {
+
+background-color: darken(#d9534f, 20%) !important;
+
+}
+
+}
