add destroy friendship and destroy page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,15 @@
-<h1>Welcome to the finance tracker app</h1>
-<%= link_to("Logout", destroy_user_session_path,
+<div class="jumbotron center">
+    <div class="container">
+        <div class="row">
+  <h1>Welcome to the finance tracker app</h1>
+  <p>Track Your Stocks and check what your friends are buying</p>
+  <p><%#= link_to("Logout", destroy_user_session_path,
                 
-                class: 'btn btn-xs btn-danger ', method: :delete) %>
+                class: 'btn btn-xl btn-danger ', method: :delete) %></p>
+        </div>
+    </div>
+</div>
+
+
+
+
