--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,16 +16,9 @@ padding-left: 15px !important;
 }
 .user-name {
 
-padding-bottom: 10px;
-margin-top: -25px;
+padding-bottom: 0px;
+padding-top:15px;
 
-}
-
-.logout {
-
-padding-left: 5;
-margin-top: -45px;
-padding-bottom: 10px;
 
 }
 
