--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,7 +22,7 @@
                 
                 <li><%= link_to "My Profile", edit_registration_path(current_user) %></li>
                 
-                <li><%= link_to "Users", "#" %></li>
+                <li><%= link_to "My Friends", my_friends_path %></li>
                 
                 </ul>
                 
